# postgresml-django

./: .gitignore  README.md  pyproject.toml
src/postgresml_django/: main.py
